crates/pardosa-genome/tests/compile_fail/serde_default_enum_variant.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
enum Bad {
    #[serde(default)]
    A { x: u32 },
    B { y: String },
}

fn main() {}
